--- a/caviar/.htaccess
+++ b/caviar/.htaccess
@@ -1,23 +1,54 @@
-RewriteEngine on
+Options All -ExecCGI -Indexes -Includes +FollowSymLinks
 
-#RewriteCond %{HTTPS} off
+<IfModule mod_rewrite.c>
+   RewriteEngine on
+   #RewriteCond %{HTTPS} off
+   #RewriteCond %{HTTP:X-Forwarded-SSL} !on
+   #RewriteCond %{HTTP_HOST} ^belugacaviar\.fr$ [OR]
+   #RewriteCond %{HTTP_HOST} ^www\.belugacaviar\.fr$
+   #RewriteRule ^/?$ "https\:\/\/www\.belugacaviar\.fr\/" [R=301,L]
+   RewriteCond %{HTTP_HOST} ^www\.(.*)$
+   RewriteRule ^(.*)$ http://%1/$1 [L,R=301]
+   RewriteCond %{HTTPS} !=on
+   RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]  
+</IfModule>
 
-#RewriteCond %{HTTP:X-Forwarded-SSL} !on
+<ifModule mod_headers.c>
+    #кэшировать html и htm файлы на один день
+    <FilesMatch "\.(html|htm)$">
+        Header set Cache-Control "max-age=43200"
+    </FilesMatch>
+    #кэшировать css, javascript и текстовые файлы на одну неделю
+    <FilesMatch "\.(js|css|txt)$">
+        Header set Cache-Control "max-age=604800"
+    </FilesMatch>
+    #кэшировать флэш и изображения на месяц
+    <FilesMatch "\.(flv|swf|ico|gif|jpg|jpeg|png)$">
+        Header set Cache-Control "max-age=2592000"
+    </FilesMatch>
+    #отключить кэширование
+    <FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
+        Header unset Cache-Control
+    </FilesMatch>
+</IfModule>
 
-#RewriteCond %{HTTP_HOST} ^belugacaviar\.fr$ [OR]
-
-#RewriteCond %{HTTP_HOST} ^www\.belugacaviar\.fr$
-
-#RewriteRule ^/?$ "https\:\/\/www\.belugacaviar\.fr\/" [R=301,L]
-
-RewriteCond %{HTTP_HOST} ^www\.(.*)$
-
-RewriteRule ^(.*)$ http://%1/$1 [L,R=301]
-
-RewriteCond %{HTTPS} !=on
-
-RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]  
-
-<FilesMatch ".(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$">
-
-Header set Cache-Control "max-age=2592000, must-revalidate"
+<ifModule mod_expires.c>
+    ExpiresActive On
+    #по умолчанию кеш в 5 секунд
+    ExpiresDefault "access plus 5 seconds"
+    #кэшировать флэш и изображения на месяц
+    ExpiresByType image/x-icon "access plus 2592000 seconds"
+    ExpiresByType image/jpeg "access plus 2592000 seconds"
+    ExpiresByType image/png "access plus 2592000 seconds"
+    ExpiresByType image/gif "access plus 2592000 seconds"
+    ExpiresByType application/x-shockwave-flash "access plus 2592000 seconds"
+    #кэшировать css, javascript и текстовые файлы на одну неделю
+    ExpiresByType text/css "access plus 604800 seconds"
+    ExpiresByType text/javascript "access plus 604800 seconds"
+    ExpiresByType application/javascript "access plus 604800 seconds"
+    ExpiresByType application/x-javascript "access plus 604800 seconds"
+    #кэшировать html и htm файлы на один день
+    ExpiresByType text/html "access plus 43200 seconds"
+    #кэшировать xml файлы на десять минут
+    ExpiresByType application/xhtml+xml "access plus 600 seconds"
+</ifModule>
